make docs for get all
